# Self-Driving-and-ROS-2-Learn-by-Doing-Map-Localization

./: .gitignore  README.md
Section10_SLAM/bumperbot_ws/src/bumperbot_bringup/: package.xml
Section10_SLAM/bumperbot_ws/src/bumperbot_bringup/launch/: simulated_robot.launch.py
Section10_SLAM/bumperbot_ws/src/bumperbot_controller/bumperbot_controller/: twist_relay.py
Section10_SLAM/bumperbot_ws/src/bumperbot_controller/config/: twist_mux_topics.yaml
Section10_SLAM/bumperbot_ws/src/bumperbot_description/worlds/: small_warehouse.world
Section10_SLAM/bumperbot_ws/src/bumperbot_mapping/: CMakeLists.txt
Section10_SLAM/bumperbot_ws/src/bumperbot_mapping/config/: slam_toolbox.yaml
Section11_Build_the_Robot/bumperbot_ws/src/bumperbot_bringup/: CMakeLists.txt  package.xml
Section11_Build_the_Robot/bumperbot_ws/src/bumperbot_bringup/config/: rplidar_a1.yaml
Section11_Build_the_Robot/bumperbot_ws/src/bumperbot_bringup/launch/: real_robot.launch.py  simulated_robot.launch.py
Section11_Build_the_Robot/bumperbot_ws/src/bumperbot_controller/: package.xml
Section11_Build_the_Robot/bumperbot_ws/src/bumperbot_controller/config/: joy_teleop.yaml  twist_mux_locks.yaml
Section11_Build_the_Robot/bumperbot_ws/src/bumperbot_controller/launch/: joystick_teleop.launch.py
Section11_Build_the_Robot/bumperbot_ws/src/bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot_ros2_control.xacro
Section11_Build_the_Robot/bumperbot_ws/src/bumperbot_description/worlds/: small_house.world
Section11_Build_the_Robot/bumperbot_ws/src/bumperbot_localization/: CMakeLists.txt  package.xml
Section11_Build_the_Robot/bumperbot_ws/src/bumperbot_localization/launch/: global_localization.launch.py
Section11_Build_the_Robot/bumperbot_ws/src/bumperbot_mapping/: CMakeLists.txt  package.xml
Section11_Build_the_Robot/bumperbot_ws/src/bumperbot_mapping/config/: slam_toolbox.yaml
Section11_Build_the_Robot/bumperbot_ws/src/bumperbot_mapping/launch/: slam.launch.py
Section11_Build_the_Robot/bumperbot_ws/src/bumperbot_mapping/rviz/: slam.rviz
Section2_Setup/bumperbot_ws/install/: local_setup.sh  setup.sh
Section2_Setup/bumperbot_ws/log/: latest_build
Section2_Setup/bumperbot_ws/src/bumperbot_bringup/: package.xml
Section2_Setup/bumperbot_ws/src/bumperbot_description/urdf/: bumperbot.urdf.xacro
Section3_Global_Localization/bumperbot_ws/src/bumperbot_localization/: package.xml
Section3_Introduction_to_ROS_2/bumperbot_ws/src/bumperbot_description/launch/: gazebo.launch.py
Section4_Sensors_for_Localization_and_Mapping/bumperbot_ws/src/bumperbot_controller/config/: twist_mux_joy.yaml
Section4_Sensors_for_Localization_and_Mapping/bumperbot_ws/src/bumperbot_controller/launch/: joystick_teleop.launch.py
Section4_Sensors_for_Localization_and_Mapping/bumperbot_ws/src/bumperbot_cpp_examples/: package.xml
Section4_Sensors_for_Localization_and_Mapping/bumperbot_ws/src/bumperbot_description/urdf/: bumperbot_gazebo.xacro
Section4_Sensors_for_Localization_and_Mapping/bumperbot_ws/src/bumperbot_description/worlds/: willowgarage.world
Section4_Sensors_for_Localization_and_Mapping/bumperbot_ws/src/bumperbot_py_examples/: setup.py
Section5_Global_Localization/bumperbot_ws/src/bumperbot_description/: CMakeLists.txt
Section5_Global_Localization/bumperbot_ws/src/bumperbot_description/launch/: gazebo.launch.py
Section5_Map_Representations/bumperbot_ws/src/bumperbot_cpp_examples/: CMakeLists.txt
Section5_Map_Representations/bumperbot_ws/src/bumperbot_cpp_examples/src/: simple_lifecycle_node.cpp
Section5_Map_Representations/bumperbot_ws/src/bumperbot_localization/: package.xml
Section5_Map_Representations/bumperbot_ws/src/bumperbot_localization/config/: map_server.yaml
Section5_Map_Representations/bumperbot_ws/src/bumperbot_mapping/: package.xml
Section5_Map_Representations/bumperbot_ws/src/bumperbot_py_examples/: setup.py
Section5_Mapping_with_known_Poses/bumperbot_ws/src/bumperbot_controller/config/: twist_mux_joy.yaml
Section5_Mapping_with_known_Poses/bumperbot_ws/src/bumperbot_localization/: CMakeLists.txt
Section6_Localization_with_known_Map/bumperbot_ws/src/bumperbot_controller/bumperbot_controller/: simple_controller.py
Section6_Localization_with_known_Map/bumperbot_ws/src/bumperbot_localization/config/: amcl.yaml  odometry_motion_model.rviz
Section6_Localization_with_known_Map/bumperbot_ws/src/bumperbot_mapping/: package.xml
Section6_Mapping_with_known_Poses/bumperbot_ws/src/bumperbot_cpp_examples/: CMakeLists.txt
Section6_Mapping_with_known_Poses/bumperbot_ws/src/bumperbot_cpp_examples/src/: simple_qos_publisher.cpp  simple_qos_subscriber.cpp
Section6_Mapping_with_known_Poses/bumperbot_ws/src/bumperbot_description/launch/: gazebo.launch.py
Section6_Mapping_with_known_Poses/bumperbot_ws/src/bumperbot_description/urdf/: bumperbot_gazebo.xacro
Section6_Mapping_with_known_Poses/bumperbot_ws/src/bumperbot_localization/launch/: global_localization.launch.py
Section6_Mapping_with_known_Poses/bumperbot_ws/src/bumperbot_mapping/: CMakeLists.txt  package.xml
Section6_Mapping_with_known_Poses/bumperbot_ws/src/bumperbot_py_examples/bumperbot_py_examples/: simple_action_client.py
Section6_Sensors_for_Localization_and_Mapping/bumperbot_ws/src/bumperbot_controller/: CMakeLists.txt
Section6_Sensors_for_Localization_and_Mapping/bumperbot_ws/src/bumperbot_cpp_examples/: CMakeLists.txt
Section6_Sensors_for_Localization_and_Mapping/bumperbot_ws/src/bumperbot_description/: CMakeLists.txt
Section6_Sensors_for_Localization_and_Mapping/bumperbot_ws/src/bumperbot_utils/: package.xml
Section7_Localization_with_known_Map/bumperbot_ws/src/bumperbot_mapping/: package.xml
Section7_Localization_with_known_Map/bumperbot_ws/src/bumperbot_msgs/: CMakeLists.txt
Section7_Map_Representations/bumperbot_ws/src/bumperbot_py_examples/: setup.py
Section7_Map_Representations/bumperbot_ws/src/bumperbot_utils/: CMakeLists.txt
Section8_Mapping_with_known_Poses/bumperbot_ws/src/bumperbot_description/: CMakeLists.txt
Section8_SLAM/bumperbot_ws/src/bumperbot_mapping/: package.xml
(+172 files in other folders)
